# ice-forget

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/rfcs/: 0000-template.md  0001-surgical-history-rewrite.md  README.md
examples/: policy.example.yaml
src/iceforget/: __init__.py  auditor.py  cli.py  coordinator.py  demo.py  indexer.py  models.py  policy.py  surgical.py  verifier.py
src/iceforget/engines/: __init__.py  base.py  pyiceberg_engine.py
tests/: conftest.py  test_certificate.py  test_cli.py  test_pipeline.py  test_purge.py  test_surgical.py  test_units.py
